<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/screen2bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Screen2">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#FFD93D"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieViewScreen2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/splashanim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#FFD93D"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/create_your_account"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinslight"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullNamebox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:background="@drawable/textbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/profile" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:hint="@string/enter_your_full_name"
                android:inputType="text"
                android:id="@+id/username"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#BDBDBD"
                android:textSize="15sp"
                tools:ignore="VisualLintTextFieldSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/textbox"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNamebox">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/emailicon" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:hint="@string/enter_your_email"
                android:id="@+id/emailaddress"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#BDBDBD"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phonebox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/textbox"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailbox">

            <ImageView
                android:id="@+id/flagIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/pakistanflag" />

            <Spinner
                android:id="@+id/countryCodeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:minHeight="48dp"
                android:popupBackground="@color/black"
                android:spinnerMode="dropdown"
                android:theme="@style/CustomSpinnerTheme" />

            <View
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="#606060" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="0dp"
                android:textColor="@color/white"
                android:textColorHint="#A0A0A0"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/textbox"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phonebox">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/password" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:id="@+id/password"
                android:layout_weight="1"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#BDBDBD"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/againpasswordbox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/textbox"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordbox">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/password" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="8dp"
                android:id="@+id/againpassword"
                android:layout_weight="1"
                android:hint="@string/enter_your_password_again"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="#BDBDBD"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/usertype"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints=""
            android:background="@drawable/textbox"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/againpasswordbox">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile" />

            <Spinner
                android:id="@+id/userTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:popupBackground="@color/black"
                android:spinnerMode="dropdown"
                android:theme="@style/CustomSpinnerTheme" />
        </LinearLayout>
        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="10sp"
            android:textColor="@color/red"
            android:fontFamily="@font/poppinslight"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/usertype"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/termspolicylayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorMessage"
            android:orientation="horizontal"
            >
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/termsCheckbox"
                android:checked="true"
                android:shadowColor="@color/gold"
                android:layout_marginTop="6dp"
                />


            <TextView
            android:id="@+id/termsandpolicytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinslight"
            android:text="By creating an account, you agree to our "
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/poppinslight"
                android:text="@string/termsofservice"
                android:textColor="@color/gold"
                />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="Create Account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:id="@+id/createAccountbtn"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:background="@drawable/custom_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/termspolicylayout"
            tools:ignore="SpeakableTextPresentCheck" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createAccountbtn"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have Existing Account "
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:id="@+id/logintext"
                android:layout_marginTop="10dp"
                android:textColor="@color/gold"
                android:fontFamily="@font/poppinslight"
                android:textStyle="bold"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>